--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,161 @@
-html,
+* {
+	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+		"Lucida Sans", Arial, sans-serif;
+	padding: 0;
+	margin: 0;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	border: 1px solid black;
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	width: 800px;
+	padding: 50px;
+	border-radius: 10px;
+	background-color: #f3f3f3;
+}
+
+.App {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+section {
+	margin: 2rem 0 1rem 0;
+}
+
+.controls {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+input {
+	text-align: center;
+	padding: 0.5rem;
+	margin-bottom: 1rem;
+}
+
+button {
+	border-radius: 20px;
+	text-align: center;
+	margin: auto;
+	display: flex;
+	padding: 0.5rem 1rem;
+	background-color: #f4a261;
+	color: #f3f3f3;
+	border: none;
+	font-family: "Roboto", sans-serif;
+	font-size: 1rem;
+}
+
+button:hover {
+	cursor: pointer;
+	background-color: purple;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+h1 {
+	color: #f28f3b;
+	text-align: center;
+	margin-bottom: 2rem;
+	margin-top: 40px;
+}
+
+h2 {
+	text-align: center;
+	margin-bottom: 2rem;
+}
+
+.nutrients ul {
+	display: flex;
+	width: 35rem;
+	justify-content: space-evenly;
+}
+
+ul {
+	list-style: none;
+}
+
+.meals {
+	display: flex;
+}
+
+p {
+	text-align: center;
+	margin: auto;
+	margin-top: 10px;
+}
+
+img {
+	width: 100%;
+	margin-bottom: 1rem;
+}
+
+article {
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
+	margin: 0 1rem;
+	max-width: 18rem;
+	box-shadow: 0 4px 8px 2px rgb(77, 77, 77, 0.15);
+}
+
+.instructions {
+	font-size: 0.9rem;
+	margin-bottom: 1rem;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	border-radius: 20px;
+	margin-bottom: 20px;
+	text-decoration: none;
+	background-color: #f4a261;
+	color: #f3f3f3;
+	width: fit-content;
+	padding: 0.5rem 1rem;
 }
 
-* {
-  box-sizing: border-box;
+a:hover {
+	cursor: pointer;
+	background-color: purple;
+}
+
+@media only screen and (max-width: 550px) {
+	.meals {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.nutrients ul {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+	}
+}
+
+.fridge-input {
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	margin: auto;
+	margin-bottom: 20px;
+}
+
+.wine {
+	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	width: 50%;
+	border: 1px solid black;
+	padding: 10px;
+	border-radius: 10px;
+	margin-bottom: 10px;
 }
